app/webroot/assets/css/base.css
/* ... */
@media (max-width: 800px) {
  .home-hero {
    height: 550px;
  }
  .home-hero__title {
    margin-top: 100px;
  }
  .home-hero__16 {
    width: 400px;
    bottom: -280px;
  }
}
@media (max-width: 550px) {
  .home-hero {
    height: 300px;
  }
  .home-hero__title {
    font-size: 18px;
    margin-top: 10px;
  }
  .home-hero__16 {
    width: 200px;
    bottom: -140px;
    right: 10px;
  }
}

.home__intro {
  margin-top: -1040px; /* fill up background behind hero */
  padding-top: 1000px;
  z-index: 10; /* hide overlap from next section */
  padding-bottom: 120px;
}
.home__intro h1 {
  text-align: center;
  color: var(--color-green);
  margin-bottom: 60px;
}
.home__intro p {
  margin-bottom: 40px;
}
.home__intro .figs {
  display: flex;
  justify-content: space-between;
  padding-top: 20px;
}
.home__intro .fig {
  width: 450px;
}
.home__intro .fig img {
  max-width: 100%;
}
.home__intro .fig:first-of-type {
  margin-right: 30px;
}

.home__facts {
  overflow: hidden; /* prevent bg--stripe overflow */
}
.home__facts,
.home__facts .section__heading {
  color: white;
}
@media (max-width: 940px) {
  .home .section__heading {
    display: none;
  }
}
.home__facts .button {
  color: var(--color-green);
  background-color: white;
  border: 1px solid white;
  transition: all .5s;
}
.home__facts .button:hover {
  color: white;
  background-color: var(--color-green);
  border: 1px solid white;
}

.home__join {
  text-align: center;
}
.home__join h1 {
  margin-bottom: 0;
  color: var(--color-green);
}
.home__join p {
  margin-top: 10px;
  margin-bottom: 40px;
}

/* Finance-Banner
---------------------------------------------------------------- */
.finance-banner {
  position: relative;
  min-height: 50vh;
  padding: 200px 40px;
  color: white;
  background: var(--color-diag-gradient);
  text-align: center;
  overflow: hidden;
}
.finance-banner h1 {
  position: relative;
  z-index: 10;
  margin: 0;
}
.finance-banner__button {
  position: relative;
  z-index: 10;
  margin-top: 40px;
  color: var(--color-purple);
  background-color: white;
  border: 1px solid white;
  transition: all .5s;
}
.finance-banner__button:hover {
  color: white;
  background-color: var(--color-purple);
  border: 1px solid var(--color-purple);
}
.home__bagels img {
  max-width: 100%;
  max-height: 100%;
}
.home__bagels {
  position: absolute;
  top: 0;
  left: 50%;
  right: 0;
  margin-left: -400px;
  width: 800px;
  height: 100%;
}
.home__bagel--1,
.home__bagel--2 {
  position: absolute;
  width: 860px;
  height: 860px;
}
.home__bagel--1 {
  left: -430px;
  top: -300px;
}
.home__bagel--2 {
  right: -430px;
  bottom: -400px;
  transform: rotate(50deg);
}

/* Review Page
---------------------------------------------------------------- */
.review {
  color: white;
  overflow: hidden;
}
.review__head-stripe {
  height: 800px;
  top: -400px;
}
.review__tail-stripe {
  position: relative;
}
.review__intro {
  padding-top: 200px;
}
.review__intro h1 {
  text-align: center;
  margin-bottom: 60px;
  position: relative;
  z-index: 100;
}
.review__swiper {
  padding: 100px 0 140px 0;
}


/* Report Landing Page
---------------------------------------------------------------- */
.report-landing__title {
  text-align: center;
  margin-bottom: 80px;
}

/* Report Detail Pages
---------------------------------------------------------------- */
.report-detail .section__title {
  text-align: center;
  margin-top: 80px;
  margin-bottom: 80px;
}
.report-detail .cp--center-section {
  padding: 60px 40px;
}
.report-detail__text.cp {
  padding-top: 10px;
}
.report-detail__text a {
  color: black;
  text-decoration: underline;
}
.report-detail .hero__caption {
  text-align: center;
}
.report-detail .hero__caption a {
  text-decoration: none;
  color: var(--color-black);
}
.report-detail .section__teaser {
  font-weight: bold;
}


/* Swiper
---------------------------------------------------------------- */
.swiper-container {
  margin: 0 auto;
  position: relative;
  /* Fix of Webkit flickering */
  z-index: 1;
  width: 100%;
  height: 100%;
}
.swiper-wrapper {
  position: relative;
  width: 100%;
  height: 100%;
  z-index: 1;
  display: flex;
  box-sizing: content-box;
  align-items: center;
  transition-property: transform;
  transform: translate3d(0px, 0, 0);
}
.swiper-slide {
  opacity: 1;
  height: 100%;
  width: 100%;
  position: relative;
  flex-shrink: 0;
  transition: opacity .5s;
  text-align: center;
  padding: 0 80px;
}
.swiper-slide .jb-vsplit,
.swiper-slide .jb-fact,
.swiper-slide .fig__caption {
  text-align: left;
}
.swiper-slide > * {
  margin: 0 auto;
}
.swiper-slide img {
  max-width: 100%;
}

/* Auto Height */
.swiper-container-autoheight,
.swiper-container-autoheight .swiper-slide {
  height: auto;
}
.swiper-container-autoheight .swiper-wrapper {
  align-items: flex-start;
  transition-property: transform, height;
}

.swiper-button-next,
.swiper-button-prev {
  position: absolute;
  top: 50%;
  width: 52px;
  height: 99px;
  margin-top: -50px;
  z-index: 10;
  cursor: pointer;
  background-size: contain;
  background-position: center;
  background-repeat: no-repeat
}

.swiper-button-next.swiper-button-disabled,
.swiper-button-prev.swiper-button-disabled {
  opacity: .35;
  cursor: auto;
  pointer-events: none;
}

.swiper-button-prev,
.swiper-container-rtl .swiper-button-next {
  background-image: url("../ico/arrow_white_left.svg");
  left: 10px;
  right: auto
}
.swiper-button-next,
.swiper-container-rtl .swiper-button-prev {
  background-image: url("../ico/arrow_white_right.svg");
  right: 10px;
  left: auto
}
.swiper-button-next--green {
  background-image: url("../ico/arrow_green_right.svg");
}
.swiper-button-prev--green {
  background-image: url("../ico/arrow_green_left.svg");
}

/* Finance Page
---------------------------------------------------------------- */
.finance {
  color: white;
  overflow: hidden;
  position: relative;
}
.finance--fund {
  color: var(--color-black);
}
/* ... */

